fix(face): harden simulation privacy and retries